@@ -17,7 +17,7 @@
 
 // Configure Java project defaults.
 
-allprojects {
+allprojects { project ->
   plugins.withType(JavaPlugin) {
     sourceCompatibility = rootProject.minJavaVersion
     targetCompatibility = rootProject.minJavaVersion
@@ -69,58 +69,21 @@ allprojects {
         "-Xlint:preview",
         "-Xdoclint:all/protected",
         "-Xdoclint:-missing",
-        "-Xdoclint:-accessibility",
-        "-proc:none",  // proc:none was added because of LOG4J2-1925 / JDK-8186647
+        "-Xdoclint:-accessibility"
       ]
 
-      if (propertyOrDefault("javac.failOnWarnings", true).toBoolean()) {
-        options.compilerArgs += "-Werror"
-      }
-    }
-  }
-}
+      if (project.path == ":lucene:benchmark-jmh") {
+        // JMH benchmarks use JMH preprocessor and incubating modules.
+      } else {
+        // proc:none was added because of LOG4J2-1925 / JDK-8186647
+        options.compilerArgs += [
+            "-proc:none"
+        ]
 
-configure(project(":lucene:core")) {
-  plugins.withType(JavaPlugin) {
-    sourceSets {
-      main19 {
-        java {
-          srcDirs = ['src/java19']
+        if (propertyOrDefault("javac.failOnWarnings", true).toBoolean()) {
+          options.compilerArgs += "-Werror"
         }
       }
-    }
-
-    configurations {
-      // Inherit any dependencies from the main source set.
-      main19Implementation.extendsFrom implementation
-    }
-    
-    dependencies {
-      // We need the main classes to compile our Java 19 pieces.
-      main19Implementation sourceSets.main.output
-    }
-
-    tasks.named('compileMain19Java').configure {
-      javaCompiler = javaToolchains.compilerFor {
-        languageVersion = JavaLanguageVersion.of(19)
-      }
-      
-      // undo alternative JDK support:
-      options.forkOptions.javaHome = null
-      
-      sourceCompatibility = 19
-      targetCompatibility = 19
-      options.compilerArgs += ["--release", 19 as String, "--enable-preview"]
-    }
-    
-    tasks.named('jar').configure {
-      into('META-INF/versions/19') {
-        from sourceSets.main19.output
-      }
-
-      manifest.attributes(
-        'Multi-Release': 'true'
-      )
     }
   }
 }
